# mysqlcapiinlinux

./: .cproject  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  ubuntu_new.yml
Debug/: makefile  mysql
Debug/src/: subdir.mk  test.d
Release/: makefile
Release/src/: MyDB.d  subdir.mk
src/: MyDB.cpp  MyDB.h  test.cpp
